@@ -13,10 +13,7 @@
 def runTests = true
 def failFast = false
 
-// Only keep the 10 most recent builds.
-properties([[$class: 'jenkins.model.BuildDiscarderProperty', strategy: [$class: 'LogRotator',
-                                                                        numToKeepStr: '50',
-                                                                        artifactNumToKeepStr: '20']]])
+properties([buildDiscarder(logRotator(numToKeepStr: '50', artifactNumToKeepStr: '20'))])
 
 // see https://github.com/jenkins-infra/documentation/blob/master/ci.adoc for information on what node types are available
 def buildTypes = ['Linux', 'Windows']
@@ -38,31 +35,30 @@ for(i = 0; i < buildTypes.size(); i++) {
                     timeout(time: 180, unit: 'MINUTES') {
                         // See below for what this method does - we're passing an arbitrary environment
                         // variable to it so that JAVA_OPTS and MAVEN_OPTS are set correctly.
-                        withMavenEnv(["JAVA_OPTS=-Xmx1536m -Xms512m -XX:MaxPermSize=1024m",
-                                    "MAVEN_OPTS=-Xmx1536m -Xms512m -XX:MaxPermSize=1024m"]) {
+                        withMavenEnv(["JAVA_OPTS=-Xmx1536m -Xms512m",
+                                    "MAVEN_OPTS=-Xmx1536m -Xms512m"]) {
                             // Actually run Maven!
-                            // The -Dmaven.repo.local=${pwd()}/.repository means that Maven will create a
-                            // .repository directory at the root of the build (which it gets from the
-                            // pwd() Workflow call) and use that for the local Maven repository.
-                            def mvnCmd = "mvn -Pdebug -U clean install ${runTests ? '-Dmaven.test.failure.ignore=true' : '-DskipTests'} -V -B -Dmaven.repo.local=${pwd()}/.repository" 
+                            // -Dmaven.repo.local=… tells Maven to create a subdir in the temporary directory for the local Maven repository
+                            def mvnCmd = "mvn -Pdebug -U javadoc:javadoc clean install ${runTests ? '-Dmaven.test.failure.ignore' : '-DskipTests'} -V -B -Dmaven.repo.local=${pwd tmp: true}/m2repo -s settings-azure.xml -e"
                             if(isUnix()) {
                                 sh mvnCmd
+                                sh 'test `git status --short | tee /dev/stderr | wc --bytes` -eq 0'
                             } else {
-                                bat "$mvnCmd -Duser.name=yay" // INFRA-1032 workaround
+                                bat mvnCmd
                             }
                         }
                     }
                 }
 
                 // Once we've built, archive the artifacts and the test results.
-                stage("${buildType} Archive Artifacts / Test Results") {
+                stage("${buildType} Publishing") {
                     def files = findFiles(glob: '**/target/*.jar, **/target/*.war, **/target/*.hpi')
                     renameFiles(files, buildType.toLowerCase())
 
                     archiveArtifacts artifacts: '**/target/*.jar, **/target/*.war, **/target/*.hpi',
                                 fingerprint: true
                     if (runTests) {
-                        junit healthScaleFactor: 20.0, testResults: '**/target/surefire-reports/*.xml'
+                        junit healthScaleFactor: 20.0, testResults: '*/target/surefire-reports/*.xml'
                     }
                 }
             }
@@ -97,8 +93,6 @@ void withMavenEnv(List envVars = [], def body) {
     }
 }
 
-// This hacky method is used because File is not whitelisted,
-// so we can't use renameTo or friends
 void renameFiles(def files, String prefix) {
     for(i = 0; i < files.length; i++) {
         def newPath = files[i].path.replace(files[i].name, "${prefix}-${files[i].name}")
